force-app/main/default/objects/TestObjectChild__c/TestObjectChild__c.object-meta.xml
<CustomObject>
    <label>TestObjectChild</label>
    <nameField>
        <label>TestObjectChild Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjectChilds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>