force-app/main/default/objects/TestObjectChild__c/fields/TestObject__c.field-meta.xml
<CustomField>
    <fullName>TestObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to TrestObject</description>
    <label>TestObject</label>
    <referenceTo>TestObject__c</referenceTo>
    <relationshipLabel>TestObjectChilds</relationshipLabel>
    <relationshipName>TestObjectChilds</relationshipName>
    <type>Lookup</type>
</CustomField>