force-app/main/default/objects/TestObjectChild__c/fields/TestObjectLookup__c.field-meta.xml
<CustomField>
    <fullName>TestObjectLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to TestObject</description>
    <label>TestObjectLookup</label>
    <referenceTo>TestObject__c</referenceTo>
    <relationshipLabel>TestObjectChildsLookup</relationshipLabel>
    <relationshipName>TestObjectChildsLookup</relationshipName>
    <type>Lookup</type>
</CustomField>