force-app/main/default/objects/TestObjectChild__c/fields/TestObjectMd__c.field-meta.xml
<CustomField>
    <fullName>TestObjectMd__c</fullName>
    <label>TestObjectMd</label>
    <referenceTo>TestObject__c</referenceTo>
    <relationshipLabel>TestObjectChildsMd</relationshipLabel>
    <relationshipName>TestObjectChildsMd</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>